--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,14 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+* {
+    font-family: 'Open Sans', sans-serif;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.content {
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Form {
+    position: relative;
+    top: 40px;
 }
